# mode-groothandel-synchronizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker-image.yml  linting.yaml  testing.yaml
website/: manage.py
website/credit_notes/: admin.py  apps.py  models.py  resources.py  services.py  tasks.py
website/credit_notes/migrations/: 0001_initial.py  0002_alter_creditnote_credit_note_number_and_more.py
website/customers/: admin.py  apps.py  models.py  resources.py  services.py
website/customers/migrations/: 0001_initial.py  0002_alter_customer_snelstart_id.py
website/invoices/: admin.py  apps.py  models.py  resources.py  services.py
website/invoices/migrations/: 0001_initial.py  0002_alter_invoice_invoice_number_and_more.py  0002_alter_invoice_snelstart_id.py  0003_alter_invoice_snelstart_id.py
website/mode_groothandel/: __init__.py  celery.py  exceptions.py  services.py  urls.py  views.py
website/mode_groothandel/api/: urls.py
website/mode_groothandel/clients/: api.py  authentication.py  utils.py
website/mode_groothandel/settings/: base.py  development.py  production.py
website/mutations/: admin.py  apps.py  models.py  resources.py
website/mutations/migrations/: 0001_initial.py  0002_alter_mutation_trigger.py  0002_mutation_message.py
website/pick_tickets/: admin.py  apps.py  models.py  resources.py  services.py
website/pick_tickets/migrations/: 0001_initial.py  0002_remove_pickticket_shipped.py  0003_alter_pickticket_order_id_alter_pickticket_sale_id_and_more.py
website/sendcloud/: admin.py  apps.py  models.py  services.py
website/sendcloud/client/: authentication.py  sendcloud.py
website/sendcloud/migrations/: 0001_initial.py
website/snelstart/: admin.py  apps.py  constants.py  forms.py  models.py  services.py
website/snelstart/clients/: authentication.py  snelstart.py
website/snelstart/migrations/: 0001_initial.py  0004_delete_taxmapping.py  (+3 more)
website/uphance/: admin.py  apps.py  constants.py  forms.py  models.py  services.py
website/users/: admin.py  apps.py  models.py
(+50 files in other folders)
