[tool.poetry]
name = "mode-groothandel-synchronizer"
version = "0.1.0"
description = "A synchronizer for Mode Groothandel"
authors = ["Lars van Rhijn <lars@larsvanrhijn.nl>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
Django = "^6.0.0"
django-import-export = "^4.4.0"
djangorestframework = "^3.15.1"
requests = "^2.31.0"
pytz = "^2026.1.post1"
django-admin-rangefilter = "^0.13.5"
django-admin-autocomplete-filter = "^0.7.1"
django-autocompletefilter = "^0.0.9"
celery = "^5.6.2"
redis = "^7.3.0"
django-celery-beat = "^2.9.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
pydocstyle = "^6.1.1"
flake8 = "^7.3.0"
freezegun = "^1.2.1"
tomli = "^2.0.1"
coverage = "^7.13.4"

[tool.poetry.group.prod.dependencies]
uwsgi = "^2.0.23"
psycopg2-binary = "^2.9.1"
sentry-sdk = "^2.54.0"

[tool.black]
line-length = 119
target-version = ["py314"]
exclude = '''
/(
  migrations
  | website/mode_groothandel/settings
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
